Prevent long titles overflowing on mobile

--- a/app/assets/stylesheets/base/_scaffolding.scss
+++ b/app/assets/stylesheets/base/_scaffolding.scss
@@ -14,6 +14,10 @@ hr {
   border-color: darken($gray-lighter, 5%);
 }
 
+.container {
+  overflow: hidden;
+}
+
 .container-centered {
   margin: 10% auto 0;
   text-align: center;
