--- a/app/assets/stylesheets/base/_type.scss
+++ b/app/assets/stylesheets/base/_type.scss
@@ -32,6 +32,11 @@ h3 {
   margin-bottom: 20px;
 }
 
+.page-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .text-muted a {
   color: #bbb;
   text-decoration: none;
